--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-9H2Z782PSL"></script>
@@ -8,9 +7,7 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'G-9H2Z782PSL');
-  </script>
-
-  <meta name="a96f26021631aa179297ed07ed3c7be3c16a0f16" content="a96f26021631aa179297ed07ed3c7be3c16a0f16" />
+  </script>  <meta name="a96f26021631aa179297ed07ed3c7be3c16a0f16" content="a96f26021631aa179297ed07ed3c7be3c16a0f16" />
   <meta name="description" content="ModVerse - Explore AI Tools, TempMail, and Digital Services.">
   <meta name="keywords" content="modverse, tempmail, ai tools, modverse.online, privacy tools, resume ai, roast generator, instagram caption ai" />
   <meta charset="UTF-8">
@@ -19,9 +16,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
-  <title>ModVerse - AI Tools & TempMail</title>
-
-  <style>
+  <title>ModVerse - AI Tools & TempMail</title>  <style>
     :root {
       --primary: #6c5ce7;
       --secondary: #a8a5e6;
@@ -104,7 +99,6 @@
       width: 200px;
     }
 
-
     .side-menu {
       position: fixed;
       top: 0;
@@ -155,15 +149,13 @@
       padding: 1rem;
       color: var(--light);
     }
-  </style>
-</head>
+  </style></head>
 <body>
   <header class="header">
     <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
     <div class="logo">ModVerse</div>
     <input type="text" class="search-box" placeholder="Search..." id="searchInput">
-  </header>
-<nav id="sideMenu" class="side-menu">
+  </header>  <nav id="sideMenu" class="side-menu">
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="contact.html">Contact</a></li>
@@ -171,54 +163,66 @@
       <li><a href="https://tempmail.modverse.online/">Tempmail</a></li>
       <li><a href="service.html">Our Services</a></li>
     </ul>
-</nav>
-  
-
-  <canvas id="bgCanvas"></canvas>
+  </nav><canvas id="bgCanvas"></canvas>
 
   <section class="hero" id="home">
     <h1>Welcome to ModVerse</h1>
     <p>Explore Tools & Services Made for the Next-Gen Internet</p>
-  </section>
-
-  <section class="content">
+  </section>  <section class="content">
     <h2>Our Free Services</h2>
     <p>
-      ModVerse aims to provide next-level tools to enhance your digital lifestyle.
-      We offer free and privacy-focused services for every kind of user. Whether you're a tech geek or a privacy lover,
-      you'll find something useful here.
-    </p>
+      ModVerse aims to provide next-level tools to enhance your digital lifestyle. We offer free and privacy-focused services for every kind of user. Whether you're a tech geek or a privacy lover, you'll find something useful here.
+    </p><h3 style="margin-top: 2rem;">TempMail Service</h3>
+<p>
+  Our TempMail service at <a href="https://tempmail.modverse.online/" target="_blank">tempmail.modverse.online</a> gives you instant disposable emails.
+</p>
+<ul>
+  <li>Auto-generate disposable email IDs</li>
+  <li>Check inbox instantly without login</li>
+  <li>Perfect for signup verifications & privacy</li>
+  <li>Spam-free, anonymous & secure</li>
+</ul>
+<p>Try our Telegram bot version here: <a href="https://t.me/Temp_mail_free_robot" target="_blank">@Temp_mail_free_robot</a>.</p>
 
-    <h3 style="margin-top: 2rem;">TempMail (Active)</h3>
-    <p>
-      Get instant, disposable email addresses with our TempMail service. Avoid spam, protect your privacy, and register
-      anywhere without revealing your real email.
-    </p>
-    <ul>
-      <li>One-tap Email Generation</li>
-      <li>Check Inbox Instantly</li>
-      <li>Private & Secure</li>
-    </ul>
+<h3 style="margin-top: 2rem;">Refer & Earn Telegram Bot</h3>
+<p>
+  Join our referral system via Telegram: <a href="https://t.me/Refer_andearnrobot" target="_blank">@Refer_andearnrobot</a>. Users can earn rewards by inviting others.
+</p>
+<ul>
+  <li>Get unique referral links</li>
+  <li>Track your earnings in real-time</li>
+  <li>Withdraw via UPI</li>
+  <li>Leaderboard system coming soon</li>
+</ul>
 
-    <h3 style="margin-top: 2rem;">Coming Soon: AI Tools</h3>
-    <p>We are working on a range of cutting-edge AI tools to make your online experience smoother and smarter:</p>
-    <ul>
-      <li><strong>AI Resume Builder</strong> – Create professional resumes in seconds using smart templates</li>
-      <li><strong>AI Chat Assistant</strong> – A personal assistant powered by powerful language models</li>
-      <li><strong>Roast Generator</strong> – Desi-style AI roast tool for fun with friends</li>
-      <li><strong>CodeFix AI</strong> – Instantly debug and improve your code using machine learning</li>
-      <li><strong>Auto Caption Tool</strong> – Generate Instagram/YouTube captions using trending AI logic</li>
-    </ul>
+<h3 style="margin-top: 2rem;">Coming Soon: AI Tools</h3>
+<p>We are working on smart AI tools to boost your digital game:</p>
+<ul>
+  <li><strong>AI Resume Builder:</strong> Make resumes instantly</li>
+  <li><strong>Roast Generator:</strong> Desi-style AI roast bot for fun</li>
+  <li><strong>Auto Caption Tool:</strong> Trending captions for Instagram/YouTube</li>
+  <li><strong>CodeFix AI:</strong> Get instant code suggestions/fixes</li>
+  <li><strong>AI Chat Assistant:</strong> Smart AI to talk & get things done</li>
+</ul>
 
-    <p style="margin-top: 1.5rem;">
-      Stay tuned! We are expanding fast and constantly rolling out new tools under the ModVerse ecosystem.
-      Bookmark our site or follow us on Instagram to get notified.
-    </p>
-  </section>
+<h2 style="margin-top: 3rem;">AI Blog Section</h2>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script>
-    // Background animation
+<h3>1. Why You Need a Resume Builder in 2025</h3>
+<p>With ModVerse’s upcoming AI Resume Builder, anyone can create a stylish and ATS-friendly resume in seconds — no design skills required.</p>
+
+<h3>2. Desi AI Roast Bots: Fun with a Twist</h3>
+<p>Spice up your chats with AI-generated savage roasts. Our Roast Bot understands Hindi & Desi tone — perfect for friend groups!</p>
+
+<h3>3. Instagram Captions Now Write Themselves</h3>
+<p>No more boring captions. Use our Caption Generator to create viral-ready, engaging lines — powered by trending AI models.</p>
+
+<h3>4. Fix Code Like a Pro Using AI</h3>
+<p>ModVerse's CodeFix AI will analyze your code in seconds and suggest real fixes — built for devs, students & coders alike.</p>
+
+<h3>5. Your Personal Chat Assistant is Almost Here</h3>
+<p>From reminders to smart replies, our AI Assistant will soon be your new best friend. Stay tuned for launch!</p>
+
+  </section>  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>  <script>
     const scene = new THREE.Scene();
     const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
     const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById("bgCanvas"), alpha: true });
@@ -234,7 +238,6 @@
     }
 
     particles.setAttribute('position', new THREE.BufferAttribute(positions, 3));
-
     const material = new THREE.PointsMaterial({ color: 0x6c5ce7, size: 0.05 });
     const particleSystem = new THREE.Points(particles, material);
     scene.add(particleSystem);
@@ -246,20 +249,12 @@
       particleSystem.rotation.y += 0.002;
       renderer.render(scene, camera);
     }
-
     animate();
-  </script>
-
-   <!-- Menu toggle -->
-  <script>
+  </script>  <script>
     function toggleMenu() {
       document.getElementById("sideMenu").classList.toggle("open");
     }
-  </script>
-  
-
-  <script>
-    // Search placeholder functionality
+  </script>  <script>
     document.getElementById("searchInput").addEventListener("input", function () {
       const query = this.value.toLowerCase();
       const content = document.querySelector(".content");
@@ -269,9 +264,7 @@
         content.scrollIntoView({ behavior: "smooth" });
       }
     });
-  </script>
-
-  <footer>
+  </script>  <footer>
     <p>&copy; 2025 ModVerse. All rights reserved.</p>
   </footer>
 </body>
