--- a/index.html
+++ b/index.html
@@ -188,6 +188,14 @@
 <p>
   Join our referral system via Telegram: <a href="https://t.me/Refer_andearnrobot" target="_blank">@Refer_andearnrobot</a>. Users can earn rewards by inviting others.
 </p>
+    <div style="text-align: center; margin: 2rem 0;">
+  <a href="https://tempmail.modverse.online/" style="display: inline-block; background-color: #6c5ce7; color: #fff; padding: 10px 20px; border-radius: 25px; text-decoration: none; font-weight: bold; margin: 0 10px;">
+    TempMail Website
+  </a>
+  <a href="https://t.me/Temp_mail_free_robot" style="display: inline-block; background-color: #6c5ce7; color: #fff; padding: 10px 20px; border-radius: 25px; text-decoration: none; font-weight: bold; margin: 0 10px;">
+    TempMail Bot
+  </a>
+    </div>
 <ul>
   <li>Get unique referral links</li>
   <li>Track your earnings in real-time</li>
