--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
 </ul>
 <p>Try our Telegram bot version here: <a href="https://t.me/Temp_mail_free_robot" target="_blank">@Temp_mail_free_robot</a>.</p>
 
-    <div style="text-align: center; margin: 2rem 0;">
-  <a href="https://tempmail.modverse.online/" style="display: inline-block; background-color: #6c5ce7; color: #fff; padding: 10px 20px; border-radius: 25px; text-decoration: none; font-weight: bold; margin: 0 10px;">
+    <div style="display: flex; justify-content: center; gap: 20px; margin: 2rem 0; flex-wrap: wrap;">
+  <a href="https://tempmail.modverse.online/" style="background-color: #6c5ce7; color: #fff; padding: 10px 20px; border-radius: 25px; text-decoration: none; font-weight: bold;">
     TempMail Website
   </a>
-  <a href="https://t.me/Temp_mail_free_robot" style="display: inline-block; background-color: #6c5ce7; color: #fff; padding: 10px 20px; border-radius: 25px; text-decoration: none; font-weight: bold; margin: 0 10px;">
+  <a href="https://t.me/Temp_mail_free_robot" style="background-color: #6c5ce7; color: #fff; padding: 10px 20px; border-radius: 25px; text-decoration: none; font-weight: bold;">
     TempMail Bot
   </a>
     </div>
