--- a/index.html
+++ b/index.html
@@ -204,6 +204,11 @@
   <li>Withdraw via UPI</li>
   <li>Leaderboard system coming soon</li>
 </ul>
+    <div style="display: flex; justify-content: center; gap: 20px; margin: 2rem 0; flex-wrap: wrap;">
+  <a href="https://t.me/Refer_andearnrobot" style="background-color: #6c5ce7; color: #fff; padding: 10px 20px; border-radius: 25px; text-decoration: none; font-weight: bold;">
+    Refer And Earn Bot
+  </a>
+    </div>
 
 <h3 style="margin-top: 2rem;">Coming Soon: AI Tools</h3>
 <p>We are working on smart AI tools to boost your digital game:</p>
