--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     gtag('js', new Date());
     gtag('config', 'G-9H2Z782PSL');
   </script>  <meta name="a96f26021631aa179297ed07ed3c7be3c16a0f16" content="a96f26021631aa179297ed07ed3c7be3c16a0f16" />
+  <meta name="google-adsense-account" content="ca-pub-9830717699605800">
   <meta name="description" content="ModVerse - Explore AI Tools, TempMail, and Digital Services.">
   <meta name="keywords" content="modverse, tempmail, ai tools, modverse.online, privacy tools, resume ai, roast generator, instagram caption ai" />
   <meta charset="UTF-8">
