--- a/index.html
+++ b/index.html
@@ -283,9 +283,7 @@
         content.scrollIntoView({ behavior: "smooth" });
       }
     });
-  </script>  <footer>
-    <p>&copy; 2025 ModVerse. All rights reserved.</p>
-  </footer>
+  </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9830717699605800"
      crossorigin="anonymous"></script>
 <!-- Horizontal -->
@@ -298,5 +296,9 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+  <footer>
+    <p>&copy; 2025 ModVerse. All rights reserved.</p>
+  </footer>
+  
 </body>
 </html>
