--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
   </header>  <nav id="sideMenu" class="side-menu">
     <ul>
       <li><a href="#home">Home</a></li>
+      <li><a href="https://tempmail.modverse.online/">Tempmail</a></li>
+      <li><a href="https://lakhan.modverse.online/">About</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="privacy.html">Privacy Policy</a></li>
-      <li><a href="https://tempmail.modverse.online/">Tempmail</a></li>
-      <li><a href="service.html">Our Services</a></li>
     </ul>
   </nav><canvas id="bgCanvas"></canvas>
 
