--- a/privacy.html
+++ b/privacy.html
@@ -119,8 +119,10 @@
   <nav id="sideMenu" class="side-menu">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="privacy.html">Privacy Policy</a></li>
       <li><a href="https://tempmail.modverse.online/">Tempmail</a></li>
+      <li><a href="https://lakhan.modverse.online/">About</a></li>
+      <li><a href="privacy.html">Privacy Policy</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
