--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <input type="text" class="search-box" placeholder="Search..." id="searchInput">
   </header>  <nav id="sideMenu" class="side-menu">
     <ul>
-      <li><a href="#home">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="https://tempmail.modverse.online/">Tempmail</a></li>
       <li><a href="https://lakhan.modverse.online/">About</a></li>
       <li><a href="contact.html">Contact</a></li>
