--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,8 @@
 <body>
   <header class="header">
     <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
-    <div class="logo">Modverse</div>
+    <div class="logo">ModVerse</div>
+    <input type="text" class="search-box" placeholder="Search..." id="searchInput">
   </header>
 
   <nav id="sideMenu" class="side-menu">
