--- a/contact.html
+++ b/contact.html
@@ -7,36 +7,21 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <style>
-    :root {
-      --primary: #6c5ce7;
-      --secondary: #a8a5e6;
-      --dark: #0a0a0a;
-      --light: #ffffff;
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', sans-serif;
-    }
-
     body {
-      background: var(--dark);
-      color: var(--light);
-      line-height: 1.6;
-      overflow-x: hidden;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      color: white;
     }
 
     .header {
       background: rgba(0, 0, 0, 0.9);
-      padding: 1rem;
+      padding: 1rem 2rem;
       position: fixed;
       width: 100%;
       top: 0;
       z-index: 1000;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
     }
 
@@ -60,33 +45,6 @@
       to {
         text-shadow: 0 0 10px var(--primary), 0 0 20px var(--secondary);
       }
-    }
-
-    .hero {
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      position: relative;
-      flex-direction: column;
-    }
-
-    canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-    }
-
-    .search-box {
-      padding: 0.5rem;
-      border-radius: 20px;
-      border: none;
-      outline: none;
-      width: 200px;
     }
 
     .side-menu {
@@ -120,40 +78,56 @@
       display: block;
     }
 
-    section.content {
-      padding: 2rem;
-      max-width: 1000px;
-      margin: auto;
+    .contact-container {
+      max-width: 700px;
+      margin: 120px auto 50px auto;
+      background: rgba(0, 0, 0, 0.6);
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px #00adb5;
     }
 
-    h2, h3 {
-      color: var(--primary);
+    .contact-container h1 {
+      text-align: center;
+      color: #00adb5;
+      margin-bottom: 20px;
     }
 
-    ul {
-      padding-left: 1.2rem;
+    .contact-info p {
+      margin: 10px 0;
+      font-size: 16px;
     }
 
+    .contact-info a {
+      color: #00fff5;
+      text-decoration: none;
+    }
+
+    canvas#bgCanvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
     footer {
       text-align: center;
       padding: 1rem;
       color: var(--light);
-    }
+      }
   </style>
 </head>
 <body>
   <header class="header">
     <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
-    <div class="logo">ModVerse</div>
-    <input type="text" class="search-box" placeholder="Search..." id="searchInput">
+    <div class="logo">Modverse</div>
   </header>
 
   <nav id="sideMenu" class="side-menu">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="https://tempmail.modverse.online/">Tempmail</a></li>
+      <li><a href="https://tempmail.modverse.online">Temp Mail</a></li>
       <li><a href="https://lakhan.modverse.online/">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="privecy.html">Privacy Policy</a></li>
     </ul>
   </nav>
 
@@ -215,4 +189,4 @@
     });
   </script>
 </body>
-  </html>
+</html>
