--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
   <style>
     body {
       margin: 0;
+      background: var(--dark);
       font-family: Arial, sans-serif;
       color: white;
     }
