--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,13 @@
 
     .header {
       background: rgba(0, 0, 0, 0.9);
-      padding: 1rem 2rem;
+      padding: 1rem;
       position: fixed;
       width: 100%;
       top: 0;
       z-index: 1000;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
     }
 
