--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,15 @@
       justify-content: space-between;
       align-items: center;
     }
+    .hero {
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      position: relative;
+      flex-direction: column;
+    }
 
     .menu-icon {
       font-size: 28px;
