--- a/contact.html
+++ b/contact.html
@@ -154,28 +154,17 @@
     </div>
   </div>
 
-  <script>
-    function toggleMenu() {
-      document.getElementById("sideMenu").classList.toggle("open");
-    }
-  </script>
-
-  <footer>
-    <p>&copy; 2025 ModVerse. All rights reserved.</p>
-  </footer>
-  
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>  <script>
     const scene = new THREE.Scene();
     const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
     const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById("bgCanvas"), alpha: true });
     renderer.setSize(window.innerWidth, window.innerHeight);
-    camera.position.z = 5;
+    document.body.appendChild(renderer.domElement);
 
     const particles = new THREE.BufferGeometry();
     const particleCount = 500;
     const positions = new Float32Array(particleCount * 3);
+
     for (let i = 0; i < particleCount * 3; i++) {
       positions[i] = (Math.random() - 0.5) * 10;
     }
@@ -185,17 +174,27 @@
     const particleSystem = new THREE.Points(particles, material);
     scene.add(particleSystem);
 
+    camera.position.z = 5;
+
     function animate() {
       requestAnimationFrame(animate);
       particleSystem.rotation.y += 0.002;
       renderer.render(scene, camera);
     }
     animate();
-
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
+  </script>  <script>
+    function toggleMenu() {
+      document.getElementById("sideMenu").classList.toggle("open");
+    }
+  </script>  <script>
+    document.getElementById("searchInput").addEventListener("input", function () {
+      const query = this.value.toLowerCase();
+      const content = document.querySelector(".content");
+      if (query.includes("tempmail") || query.includes("email")) {
+        content.scrollIntoView({ behavior: "smooth" });
+      } else if (query.includes("ai") || query.includes("tools") || query.includes("roast")) {
+        content.scrollIntoView({ behavior: "smooth" });
+      }
     });
   </script>
 </body>
