--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <!-- Background Animation -->
+  <!-- Background Animation (same as index.html) -->
   <div id="background-wrap">
     <div class="bubble x1"></div>
     <div class="bubble x2"></div>
@@ -17,26 +17,19 @@
     <div class="bubble x5"></div>
   </div>
 
-  <!-- Header / Logo -->
+  <!-- Logo (same as index.html) -->
   <header style="text-align:center; padding: 20px;">
     <img src="assets/img/logo.png" alt="ModVerse Logo" style="max-width: 200px;" />
   </header>
 
-  <!-- Contact Form Section -->
-  <section style="max-width: 500px; margin: auto; background: rgba(0,0,0,0.6); padding: 20px; border-radius: 10px; color: #fff;">
-    <h2 style="text-align:center;">Contact Us</h2>
-    <form action="mailto:your@email.com" method="post" enctype="text/plain">
-      <label for="name">Name:</label><br />
-      <input type="text" id="name" name="name" required style="width: 100%; padding: 10px;" /><br /><br />
-
-      <label for="email">Email:</label><br />
-      <input type="email" id="email" name="email" required style="width: 100%; padding: 10px;" /><br /><br />
-
-      <label for="message">Message:</label><br />
-      <textarea id="message" name="message" rows="5" required style="width: 100%; padding: 10px;"></textarea><br /><br />
-
-      <button type="submit" style="padding: 10px 20px;">Send</button>
-    </form>
+  <!-- Contact Info Section -->
+  <section style="max-width: 600px; margin: auto; background: rgba(0,0,0,0.6); padding: 20px; border-radius: 10px; color: #fff; font-family: sans-serif;">
+    <h2 style="text-align:center; color: #00ffff;">Contact Us</h2>
+    <p><strong>Telegram Channel:</strong><br> <a href="https://t.me/modverse_online" style="color: #00ffff;">https://t.me/modverse_online</a></p>
+    <p><strong>Telegram ID:</strong><br> <a href="https://t.me/lakhan_lakhnotra" style="color: #00ffff;">@lakhan_lakhnotra</a></p>
+    <p><strong>Email (Support):</strong><br> support@modverse.online</p>
+    <p><strong>Location:</strong><br> India (Remote Support)</p>
+    <p><strong>Availability:</strong><br> Mon–Sat, 10AM – 6PM IST</p>
   </section>
 
   <!-- Footer -->
