--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,20 @@
     <div class="bubble x5"></div>
   </div>
 
-  <!-- Logo (same as index.html) -->
-  <header style="text-align:center; padding: 20px;">
-    <img src="assets/img/logo.png" alt="ModVerse Logo" style="max-width: 200px;" />
-  </header>
+  <!-- Top Navigation / Title -->
+  <div id="menuToggle">
+    <input type="checkbox" />
+    <span></span>
+    <span></span>
+    <span></span>
+    <ul id="menu">
+      <a href="index.html"><li>Home</li></a>
+      <a href="contact.html"><li>Contact</li></a>
+      <!-- Add more links here -->
+    </ul>
+  </div>
+
+  <h1 class="glow" style="text-align:center;">TEMP MAIL</h1>
 
   <!-- Contact Info Section -->
   <section style="max-width: 600px; margin: auto; background: rgba(0,0,0,0.6); padding: 20px; border-radius: 10px; color: #fff; font-family: sans-serif;">
