--- a/contact.html
+++ b/contact.html
@@ -3,49 +3,189 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact - ModVerse</title>
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <title>ModVerse - Contact</title>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <style>
+    :root {
+      --primary: #6c5ce7;
+      --secondary: #a8a5e6;
+      --dark: #0a0a0a;
+      --light: #ffffff;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    body {
+      background: var(--dark);
+      color: var(--light);
+      line-height: 1.6;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .header {
+      background: rgba(0, 0, 0, 0.9);
+      padding: 1rem;
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 1000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .logo {
+      font-size: 24px;
+      font-weight: bold;
+      color: var(--primary);
+      animation: glow 1.5s infinite alternate;
+    }
+
+    @keyframes glow {
+      from {
+        text-shadow: 0 0 5px var(--primary), 0 0 10px var(--secondary);
+      }
+      to {
+        text-shadow: 0 0 10px var(--primary), 0 0 20px var(--secondary);
+      }
+    }
+
+    .side-menu {
+      position: fixed;
+      top: 0;
+      left: -250px;
+      width: 250px;
+      height: 100%;
+      background-color: #111;
+      padding-top: 60px;
+      transition: left 0.3s ease;
+      z-index: 999;
+    }
+
+    .side-menu.open {
+      left: 0;
+    }
+
+    .side-menu ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .side-menu li {
+      padding: 15px 20px;
+    }
+
+    .side-menu li a {
+      color: white;
+      text-decoration: none;
+      display: block;
+    }
+
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+
+    main {
+      flex: 1;
+      padding-top: 80px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      color: var(--light);
+      background: #111;
+    }
+
+    .menu-icon {
+      position: absolute;
+      left: 1rem;
+      font-size: 28px;
+      cursor: pointer;
+      color: var(--light);
+    }
+  </style>
 </head>
 <body>
+  <header class="header">
+    <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
+    <div class="logo">ModVerse</div>
+  </header>
 
-  <!-- Background Animation (same as index.html) -->
-  <div id="background-wrap">
-    <div class="bubble x1"></div>
-    <div class="bubble x2"></div>
-    <div class="bubble x3"></div>
-    <div class="bubble x4"></div>
-    <div class="bubble x5"></div>
-  </div>
-
-  <!-- Top Navigation / Title -->
-  <div id="menuToggle">
-    <input type="checkbox" />
-    <span></span>
-    <span></span>
-    <span></span>
-    <ul id="menu">
-      <a href="index.html"><li>Home</li></a>
-      <a href="contact.html"><li>Contact</li></a>
-      <!-- Add more links here -->
+  <nav id="sideMenu" class="side-menu">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="https://tempmail.modverse.online/">Tempmail</a></li>
+      <li><a href="https://lakhan.modverse.online/">About</a></li>
+      <li><a href="privacy.html">Privacy Policy</a></li>
     </ul>
-  </div>
+  </nav>
 
-  <h1 class="glow" style="text-align:center;">TEMP MAIL</h1>
+  <canvas id="bgCanvas"></canvas>
 
-  <!-- Contact Info Section -->
-  <section style="max-width: 600px; margin: auto; background: rgba(0,0,0,0.6); padding: 20px; border-radius: 10px; color: #fff; font-family: sans-serif;">
-    <h2 style="text-align:center; color: #00ffff;">Contact Us</h2>
-    <p><strong>Telegram Channel:</strong><br> <a href="https://t.me/modverse_online" style="color: #00ffff;">https://t.me/modverse_online</a></p>
-    <p><strong>Telegram ID:</strong><br> <a href="https://t.me/lakhan_lakhnotra" style="color: #00ffff;">@lakhan_lakhnotra</a></p>
-    <p><strong>Email (Support):</strong><br> support@modverse.online</p>
-    <p><strong>Location:</strong><br> India (Remote Support)</p>
-    <p><strong>Availability:</strong><br> Mon–Sat, 10AM – 6PM IST</p>
-  </section>
+  <main>
+    <!-- Content can be added here -->
+  </main>
 
-  <!-- Footer -->
-  <footer style="text-align:center; padding: 20px; color: #fff;">
+  <footer>
     <p>&copy; 2025 ModVerse. All rights reserved.</p>
   </footer>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script>
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(
+      75,
+      window.innerWidth / window.innerHeight,
+      0.1,
+      1000
+    );
+    const renderer = new THREE.WebGLRenderer({
+      canvas: document.getElementById("bgCanvas"),
+      alpha: true,
+    });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
+
+    const particles = new THREE.BufferGeometry();
+    const particleCount = 500;
+    const positions = new Float32Array(particleCount * 3);
+
+    for (let i = 0; i < particleCount * 3; i++) {
+      positions[i] = (Math.random() - 0.5) * 10;
+    }
+
+    particles.setAttribute("position", new THREE.BufferAttribute(positions, 3));
+    const material = new THREE.PointsMaterial({ color: 0x6c5ce7, size: 0.05 });
+    const particleSystem = new THREE.Points(particles, material);
+    scene.add(particleSystem);
+
+    camera.position.z = 5;
+
+    function animate() {
+      requestAnimationFrame(animate);
+      particleSystem.rotation.y += 0.002;
+      renderer.render(scene, camera);
+    }
+    animate();
+  </script>
+
+  <script>
+    function toggleMenu() {
+      document.getElementById("sideMenu").classList.toggle("open");
+    }
+  </script>
 </body>
 </html>
