--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ModVerse - Contact</title>
+  <title>Contact Us - ModVerse</title>
+  <meta name="description" content="Contact ModVerse team via Telegram, email or remote support. We’re available Mon–Sat, 10AM–6PM IST." />
+  <meta name="keywords" content="ModVerse, Contact, Support, Telegram, Email, Remote Help" />
+  <meta name="author" content="ModVerse Team" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <style>
     :root {
@@ -99,7 +102,34 @@
 
     main {
       flex: 1;
-      padding-top: 80px;
+      padding: 100px 20px 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .contact-card {
+      background-color: #1c1c1e;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(108, 92, 231, 0.3);
+      max-width: 500px;
+      width: 100%;
+    }
+
+    .contact-card h2 {
+      color: var(--primary);
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+
+    .contact-card p {
+      margin: 0.5rem 0;
+    }
+
+    .contact-card a {
+      color: var(--secondary);
+      text-decoration: none;
     }
 
     footer {
@@ -129,6 +159,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="https://tempmail.modverse.online/">Tempmail</a></li>
       <li><a href="https://lakhan.modverse.online/">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
       <li><a href="privacy.html">Privacy Policy</a></li>
     </ul>
   </nav>
@@ -136,7 +167,14 @@
   <canvas id="bgCanvas"></canvas>
 
   <main>
-    <!-- Content can be added here -->
+    <div class="contact-card">
+      <h2>Contact Us</h2>
+      <p><strong>Telegram Channel:</strong> <a href="https://t.me/modverse_online" target="_blank">t.me/modverse_online</a></p>
+      <p><strong>Telegram ID:</strong> <a href="https://t.me/lakhan_lakhnotra" target="_blank">@lakhan_lakhnotra</a></p>
+      <p><strong>Email (Support):</strong> <a href="mailto:support@modverse.online">support@modverse.online</a></p>
+      <p><strong>Location:</strong> India (Remote Support)</p>
+      <p><strong>Availability:</strong> Mon–Sat, 10AM – 6PM IST</p>
+    </div>
   </main>
 
   <footer>
