--- a/privacy.html
+++ b/privacy.html
@@ -2,20 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy - ModVerse</title>
-  <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <meta name="description" content="Read the privacy policy of ModVerse at www.modverse.online. Learn how we collect, use, and protect your data." />
+  <meta name="keywords" content="ModVerse, Privacy Policy, Data Protection, User Privacy, Terms" />
   <style>
-    body {
+    :root {
+      --primary: #6c5ce7;
+      --secondary: #a8a5e6;
+      --dark: #0a0a0a;
+      --light: #ffffff;
+    }
+
+    * {
       margin: 0;
-      font-family: Arial, sans-serif;
-      color: white;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    body {
+      background: var(--dark);
+      color: var(--light);
+      line-height: 1.6;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
     }
 
     .header {
       background: rgba(0, 0, 0, 0.9);
-      padding: 1rem 2rem;
+      padding: 1rem;
       position: fixed;
       width: 100%;
       top: 0;
@@ -25,28 +43,19 @@
       align-items: center;
     }
 
-    .menu-icon {
-      position: absolute;
-      left: 20px;
-      font-size: 28px;
-      cursor: pointer;
-      color: white;
-    }
-
     .logo {
       font-size: 24px;
       font-weight: bold;
-      color: #00adb5;
+      color: var(--primary);
       animation: glow 1.5s infinite alternate;
-      text-align: center;
     }
 
     @keyframes glow {
       from {
-        text-shadow: 0 0 5px #00adb5, 0 0 10px #00adb5;
+        text-shadow: 0 0 5px var(--primary), 0 0 10px var(--secondary);
       }
       to {
-        text-shadow: 0 0 20px #00adb5, 0 0 30px #00adb5;
+        text-shadow: 0 0 10px var(--primary), 0 0 20px var(--secondary);
       }
     }
 
@@ -81,39 +90,67 @@
       display: block;
     }
 
-    .contact-container {
-      max-width: 800px;
-      margin: 120px auto 50px auto;
-      background: rgba(0, 0, 0, 0.6);
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 20px #00adb5;
-    }
-
-    .contact-container h1 {
-      text-align: center;
-      color: #00adb5;
-      margin-bottom: 20px;
-    }
-
-    .contact-info p {
-      margin: 10px 0;
-      font-size: 16px;
-      line-height: 1.6;
-    }
-
-    canvas#bgCanvas {
+    canvas {
       position: fixed;
       top: 0;
       left: 0;
+      width: 100%;
+      height: 100%;
       z-index: -1;
+    }
+
+    main {
+      flex: 1;
+      padding: 100px 20px 40px;
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    .contact-card {
+      background: rgba(255, 255, 255, 0.03);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 10px;
+      padding: 2rem;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 0 20px rgba(108, 92, 231, 0.3);
+    }
+
+    .contact-card h2 {
+      font-size: 28px;
+      margin-bottom: 1rem;
+      color: var(--primary);
+    }
+
+    .contact-card h3 {
+      margin-top: 1.5rem;
+      color: var(--primary);
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      color: var(--light);
+      background: #111;
+    }
+
+    .menu-icon {
+      position: absolute;
+      left: 1rem;
+      font-size: 28px;
+      cursor: pointer;
+      color: var(--light);
+    }
+
+    a {
+      color: var(--secondary);
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
   <header class="header">
     <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
-    <div class="logo">MODVERSE</div>
+    <div class="logo">ModVerse</div>
   </header>
 
   <nav id="sideMenu" class="side-menu">
@@ -121,78 +158,81 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="https://tempmail.modverse.online/">Tempmail</a></li>
       <li><a href="https://lakhan.modverse.online/">About</a></li>
-      <li><a href="privacy.html">Privacy Policy</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="privacy.html">Privacy Policy</a></li>
     </ul>
   </nav>
 
   <canvas id="bgCanvas"></canvas>
 
-  <div class="contact-container">
-    <h1>Privacy Policy</h1>
-    <div class="contact-info">
-      <p><strong>Effective Date:</strong> April 29, 2025</p>
-      
-      <p>At ModVerse, we are committed to protecting your privacy and ensuring a safe experience on our platform. This Privacy Policy outlines how we collect, use, and protect your personal information.</p>
+  <main>
+    <div class="contact-card">
+      <h2>Privacy Policy</h2>
+      <p><strong>Last Updated:</strong> May 3, 2025</p>
+      <p>At <strong>ModVerse</strong>, accessible from <a href="https://www.modverse.online" target="_blank">www.modverse.online</a>, the privacy of our visitors is a top priority. This Privacy Policy outlines the types of information we collect and how we use it.</p>
 
-      <p><strong>Information We Collect:</strong></p>
-      <p>We may collect limited information such as:</p>
-      <ul>
-        <li>Telegram usernames or IDs (for bot interaction)</li>
-        <li>Temporary email addresses generated via our services</li>
-        <li>Device information (browser, IP address) for analytics and security</li>
+      <h3>1. Information We Collect</h3>
+      <p>We do not collect personal information unless you voluntarily provide it via contact forms or support requests. We may collect non-personal data such as browser type, device info, or usage patterns for analytics purposes.</p>
+
+      <h3>2. Use of Information</h3>
+      <p>The information we collect is used to:</p>
+      <ul style="margin-left:1rem;">
+        <li>Improve user experience</li>
+        <li>Respond to support requests</li>
+        <li>Analyze website traffic (via Google Analytics or similar tools)</li>
       </ul>
 
-      <p><strong>How We Use Your Information:</strong></p>
-      <ul>
-        <li>To provide you with services such as temporary mail and referral programs</li>
-        <li>To improve our platform based on anonymous analytics</li>
-        <li>To communicate updates or important changes</li>
-      </ul>
+      <h3>3. Cookies</h3>
+      <p>We may use cookies to store user preferences or session data. You can disable cookies through your browser settings.</p>
 
-      <p><strong>Data Security:</strong></p>
-      <p>We use secure methods to store and handle data. However, no platform is completely immune to threats. We recommend not sharing sensitive information via our temporary mail services.</p>
+      <h3>4. Third-Party Links</h3>
+      <p>Our website may include links to external sites. We are not responsible for their privacy practices or content.</p>
 
-      <p><strong>Third-Party Services:</strong></p>
-      <p>We may use third-party APIs such as Mail.tm for temp mail. These services have their own privacy policies, and we encourage users to review them.</p>
+      <h3>5. Data Security</h3>
+      <p>We implement industry-standard security measures to protect your data, but no system is 100% secure.</p>
 
-      <p><strong>User Rights:</strong></p>
-      <ul>
-        <li>You can request deletion of your user data by contacting us via Telegram.</li>
-        <li>You are not required to provide personal information to use basic services.</li>
-      </ul>
+      <h3>6. Changes to This Policy</h3>
+      <p>We may update this Privacy Policy from time to time. All changes will be posted on this page with the updated date.</p>
 
-      <p><strong>Contact:</strong> For any concerns regarding privacy, please reach out via <a href="https://t.me/lakhan_lakhnotra" target="_blank">@lakhan_lakhnotra</a> or our <a href="https://t.me/modverse_online" target="_blank">official Telegram channel</a>.</p>
-
-      <p>We reserve the right to update this Privacy Policy at any time. Changes will be reflected on this page.</p>
+      <h3>7. Contact Us</h3>
+      <p>If you have any questions about this Privacy Policy, contact us at <a href="mailto:support@modverse.online">support@modverse.online</a>.</p>
     </div>
-  </div>
+  </main>
 
-  <script>
-    function toggleMenu() {
-      document.getElementById("sideMenu").classList.toggle("open");
-    }
-  </script>
+  <footer>
+    <p>&copy; 2025 ModVerse. All rights reserved.</p>
+  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script>
     const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById("bgCanvas"), alpha: true });
+    const camera = new THREE.PerspectiveCamera(
+      75,
+      window.innerWidth / window.innerHeight,
+      0.1,
+      1000
+    );
+    const renderer = new THREE.WebGLRenderer({
+      canvas: document.getElementById("bgCanvas"),
+      alpha: true,
+    });
     renderer.setSize(window.innerWidth, window.innerHeight);
-    camera.position.z = 5;
+    document.body.appendChild(renderer.domElement);
 
     const particles = new THREE.BufferGeometry();
     const particleCount = 500;
     const positions = new Float32Array(particleCount * 3);
+
     for (let i = 0; i < particleCount * 3; i++) {
       positions[i] = (Math.random() - 0.5) * 10;
     }
 
-    particles.setAttribute('position', new THREE.BufferAttribute(positions, 3));
+    particles.setAttribute("position", new THREE.BufferAttribute(positions, 3));
     const material = new THREE.PointsMaterial({ color: 0x6c5ce7, size: 0.05 });
     const particleSystem = new THREE.Points(particles, material);
     scene.add(particleSystem);
+
+    camera.position.z = 5;
 
     function animate() {
       requestAnimationFrame(animate);
@@ -200,12 +240,12 @@
       renderer.render(scene, camera);
     }
     animate();
+  </script>
 
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-    });
+  <script>
+    function toggleMenu() {
+      document.getElementById("sideMenu").classList.toggle("open");
+    }
   </script>
 </body>
 </html>
