--- a/contact.html
+++ b/contact.html
@@ -160,6 +160,7 @@
       <li><a href="https://tempmail.modverse.online/">Tempmail</a></li>
       <li><a href="https://lakhan.modverse.online/">About</a></li>
       <li><a href="privacy.html">Privacy Policy</a></li>
+      <li><a href="terms.html">Terms of Service</a></li>
     </ul>
   </nav>
 
