--- a/privacy.html
+++ b/privacy.html
@@ -159,6 +159,7 @@
       <li><a href="https://tempmail.modverse.online/">Tempmail</a></li>
       <li><a href="https://lakhan.modverse.online/">About</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="terms.html">Terms of Service</a></li>
     </ul>
   </nav>
 
