--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   </header>  <nav id="sideMenu" class="side-menu">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="https://tempmail.modverse.online/">Tempmail</a></li>
+      <li><a href="https://www.tempmail.modverse.online/">Tempmail</a></li>
       <li><a href="https://lakhan.modverse.online/">About</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="privacy.html">Privacy Policy</a></li>
@@ -190,7 +190,7 @@
 <p>Try our Telegram bot version here: <a href="https://t.me/Temp_mail_free_robot" target="_blank">@Temp_mail_free_robot</a>.</p>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin: 2rem 0; flex-wrap: wrap;">
-  <a href="https://tempmail.modverse.online/" style="background-color: #6c5ce7; color: #fff; padding: 10px 20px; border-radius: 25px; text-decoration: none; font-weight: bold;">
+  <a href="https://www.tempmail.modverse.online/" style="background-color: #6c5ce7; color: #fff; padding: 10px 20px; border-radius: 25px; text-decoration: none; font-weight: bold;">
     TempMail Website
   </a>
   <a href="https://t.me/Temp_mail_free_robot" style="background-color: #6c5ce7; color: #fff; padding: 10px 20px; border-radius: 25px; text-decoration: none; font-weight: bold;">
