--- a/contact.html
+++ b/contact.html
@@ -157,7 +157,7 @@
   <nav id="sideMenu" class="side-menu">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="https://tempmail.modverse.online/">Tempmail</a></li>
+      <li><a href="https://www.tempmail.modverse.online/">Tempmail</a></li>
       <li><a href="https://lakhan.modverse.online/">About</a></li>
       <li><a href="privacy.html">Privacy Policy</a></li>
       <li><a href="terms.html">Terms of Service</a></li>
