--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       ModVerse aims to provide next-level tools to enhance your digital lifestyle. We offer free and privacy-focused services for every kind of user. Whether you're a tech geek or a privacy lover, you'll find something useful here.
     </p><h3 style="margin-top: 2rem;">TempMail Service</h3>
 <p>
-  Our TempMail service at <a href="https://tempmail.modverse.online/" target="_blank">tempmail.modverse.online</a> gives you instant disposable emails.
+  Our TempMail service at <a href="https://www.tempmail.modverse.online/" target="_blank">tempmail.modverse.online</a> gives you instant disposable emails.
 </p>
 <ul>
   <li>Auto-generate disposable email IDs</li>
