--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </script>  <meta name="a96f26021631aa179297ed07ed3c7be3c16a0f16" content="a96f26021631aa179297ed07ed3c7be3c16a0f16" />
   <meta name="google-adsense-account" content="ca-pub-9830717699605800">
   <meta name="description" content="ModVerse - Explore AI Tools, TempMail, and Digital Services.">
-  <meta name="keywords" content="modverse, tempmail, ai tools, modverse.online, privacy tools, resume ai, roast generator, instagram caption ai" />
+  <meta name="keywords" content="modverse, www.modverse, www.modverse.online, tempmail, ai tools, modverse.online, privacy tools, lakhan lakhnotra, @lakhan lakhnotra, @lakhan_lakhnotra, lakhan, lakhan ahir, resume ai, roast generator, instagram caption ai" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
