--- a/index.html
+++ b/index.html
@@ -162,8 +162,10 @@
   </header>  <nav id="sideMenu" class="side-menu">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="https://tm.modverse.online/">Temp Mail 1</a></li>
-      <li><a href="https://www.tempmail.modverse.online/">Temp Mail 2</a></li>
+      <li><a href="https://modverse.online/">Modverse Main</a></li>
+      <li><a href="https://tm.modverse.online/">Temp Mail</a></li>
+      <li><a href="https://tempmail.modverse.online/">Temp Mail 2</a></li>
+      <li><a href="https://scraper.modverse.online/">Website Scraper</a></li>
       <li><a href="https://lakhan.modverse.online/">About</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="privacy.html">Privacy Policy</a></li>
@@ -180,7 +182,7 @@
       ModVerse aims to provide next-level tools to enhance your digital lifestyle. We offer free and privacy-focused services for every kind of user. Whether you're a tech geek or a privacy lover, you'll find something useful here.
     </p><h3 style="margin-top: 2rem;">TempMail Service</h3>
 <p>
-  Our TempMail service at <a href="https://tm.modverse.online/" target="_blank">tm.modverse.online</a> gives you instant disposable emails.
+  Our TempMail service at <a href="https://tempmail.modverse.online/" target="_blank">tempmail.modverse.online</a> gives you instant disposable emails.
 </p>
 <ul>
   <li>Auto-generate disposable email IDs</li>
@@ -191,10 +193,10 @@
 <p>Try our Telegram bot version here: <a href="https://t.me/Temp_mail_free_robot" target="_blank">@Temp_mail_free_robot</a>.</p>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin: 2rem 0; flex-wrap: wrap;">
-      <a href="https://tm.modverse.online/" style="background-color: #6c5ce7; color: #fff; padding: 10px 20px; border-radius: 25px; text-decoration: none; font-weight: bold;">
+      <a href="https://tempmail.modverse.online/" style="background-color: #6c5ce7; color: #fff; padding: 10px 20px; border-radius: 25px; text-decoration: none; font-weight: bold;">
     TempMail Website
       </a>
-  <a href="https://www.tempmail.modverse.online/" style="background-color: #6c5ce7; color: #fff; padding: 10px 20px; border-radius: 25px; text-decoration: none; font-weight: bold;">
+  <a href="https://tm.modverse.online/" style="background-color: #6c5ce7; color: #fff; padding: 10px 20px; border-radius: 25px; text-decoration: none; font-weight: bold;">
     TempMail Website 2
   </a>
   <a href="https://t.me/Temp_mail_free_robot" style="background-color: #6c5ce7; color: #fff; padding: 10px 20px; border-radius: 25px; text-decoration: none; font-weight: bold;">
