--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy - ModVerse</title>
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-  <meta name="description" content="Read the privacy policy of ModVerse at www.modverse.online. Learn how we collect, use, and protect your data." />
+  <meta name="description" content="Read the privacy policy of ModVerse at modverse.modverse.online and modverse.online. Learn how we collect, use, and protect your data." />
   <meta name="keywords" content="ModVerse, Privacy Policy, Data Protection, User Privacy, Terms" />
   <style>
     :root {
@@ -156,9 +156,6 @@
   <nav id="sideMenu" class="side-menu">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="https://lakhan.modverse.online/">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="terms.html">Terms of Service</a></li>
     </ul>
   </nav>
 
@@ -168,7 +165,7 @@
     <div class="contact-card">
       <h2>Privacy Policy</h2>
       <p><strong>Last Updated:</strong> May 3, 2025</p>
-      <p>At <strong>ModVerse</strong>, accessible from <a href="https://www.modverse.online" target="_blank">www.modverse.online</a>, the privacy of our visitors is a top priority. This Privacy Policy outlines the types of information we collect and how we use it.</p>
+      <p>At <strong>ModVerse</strong>, accessible from <a href="https://modverse.modverse.online" target="_blank">modverse.modverse.online</a>, the privacy of our visitors is a top priority. This Privacy Policy outlines the types of information we collect and how we use it.</p>
 
       <h3>1. Information We Collect</h3>
       <p>We do not collect personal information unless you voluntarily provide it via contact forms or support requests. We may collect non-personal data such as browser type, device info, or usage patterns for analytics purposes.</p>
