--- a/terms.html
+++ b/terms.html
@@ -156,9 +156,6 @@
   <nav id="sideMenu" class="side-menu">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="https://lakhan.modverse.online/">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="privacy.html">Privacy Policy</a></li>
     </ul>
   </nav>
 
@@ -168,7 +165,7 @@
     <div class="contact-card">
       <h2>Terms of Service</h2>
       <p><strong>Effective Date:</strong> May 3, 2025</p>
-      <p>By accessing and using <strong>ModVerse</strong> (www.modverse.online), you agree to be bound by the following Terms of Service. Please read them carefully.</p>
+      <p>By accessing and using <strong>ModVerse</strong> (modverse.modverse.online), you agree to be bound by the following Terms of Service. Please read them carefully.</p>
 
       <h3>1. Acceptance of Terms</h3>
       <p>By using this website, you agree to comply with and be legally bound by these terms. If you do not agree, please do not use the website.</p>
