--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="https://modverse.online/">Modverse Main</a></li>
-      <li><a href="https://tm.modverse.online/">Temp Mail</a></li>
-      <li><a href="https://tempmail.modverse.online/">Temp Mail 2</a></li>
+      <li><a href="https://tempmail.modverse.online/">Temp Mail</a></li>
+      <li><a href="https://tm.modverse.online/">Temp Mail 2</a></li>
       <li><a href="https://scraper.modverse.online/">Website Scraper</a></li>
       <li><a href="https://lakhan.modverse.online/">About</a></li>
       <li><a href="contact.html">Contact</a></li>
