--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Us - ModVerse</title>
   <meta name="description" content="Contact ModVerse team via Telegram, email or remote support. We’re available Mon–Sat, 10AM–6PM IST." />
-  <meta name="keywords" content="ModVerse, Contact, Support, Telegram, Email, Remote Help" />
+  <meta name="keywords" content="ModVerse, Contact, Support, Telegram, modverse, modverse.online, modverse.modverse.online, @lakhan_lakhnotra ,lakhan lakhnotra, lakhan ahir, @lakhan_ahir_9499 Email, Remote Help" />
   <meta name="author" content="ModVerse Team" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <style>
