--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </script>  <meta name="a96f26021631aa179297ed07ed3c7be3c16a0f16" content="a96f26021631aa179297ed07ed3c7be3c16a0f16" />
   <meta name="google-adsense-account" content="ca-pub-9830717699605800">
   <meta name="description" content="ModVerse - Explore AI Tools, TempMail, and Digital Services.">
-  <meta name="keywords" content="modverse, www.modverse, www.modverse.online, tempmail, ai tools, modverse.online, privacy tools, lakhan lakhnotra, @lakhan lakhnotra, @lakhan_lakhnotra, lakhan, lakhan ahir, resume ai, roast generator, instagram caption ai" />
+  <meta name="keywords" content="modverse, modverse.online, www.modverse.online, tempmail, ai tools, modverse.modverse.online, privacy tools, lakhan lakhnotra, @lakhan lakhnotra, @lakhan_lakhnotra, lakhan, lakhan ahir, resume ai, tempmail.modverse.online, instagram caption ai" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
@@ -166,7 +166,7 @@
       <li><a href="https://tempmail.modverse.online/">Temp Mail</a></li>
       <li><a href="https://tm.modverse.online/">Temp Mail 2</a></li>
       <li><a href="https://scraper.modverse.online/">Website Scraper</a></li>
-      <li><a href="https://lakhan.modverse.online/">About</a></li>
+      <li><a href="https://about.modverse.online/">About</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="privacy.html">Privacy Policy</a></li>
       <li><a href="terms.html">Terms of Service</a></li>
