--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,7 @@
   <title>Privacy Policy - ModVerse</title>
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <meta name="description" content="Read the privacy policy of ModVerse at modverse.modverse.online and modverse.online. Learn how we collect, use, and protect your data." />
-  <meta name="keywords" content="ModVerse, Privacy Policy, Data Protection, User Privacy, Terms" />
+  <meta name="keywords" content="ModVerse, Privacy Policy, Data Protection, User Privacy, Terms, modverse, modverse.online, www.modverse.online, tempmail, ai tools, modverse.modverse.online, privacy tools, lakhan lakhnotra, @lakhan lakhnotra, @lakhan_lakhnotra, lakhan, lakhan ahir, resume ai, tempmail.modverse.online, instagram caption ai" />
   <style>
     :root {
       --primary: #6c5ce7;
