--- a/terms.html
+++ b/terms.html
@@ -6,7 +6,7 @@
   <title>Terms of Service - ModVerse</title>
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <meta name="description" content="Read the Terms of Service for using ModVerse. Know your rights, obligations, and usage rules." />
-  <meta name="keywords" content="ModVerse, Terms of Service, Website Terms, User Agreement" />
+  <meta name="keywords" content="ModVerse, Terms of Service, Website Terms, User Agreement, modverse, modverse.online, www.modverse.online, tempmail, ai tools, modverse.modverse.online, privacy tools, lakhan lakhnotra, @lakhan lakhnotra, @lakhan_lakhnotra, lakhan, lakhan ahir, resume ai, tempmail.modverse.online, instagram caption ai" />
   <style>
     :root {
       --primary: #6c5ce7;
