--- a/index.html
+++ b/index.html
@@ -248,6 +248,14 @@
 <h3>5. Your Personal Chat Assistant is Almost Here</h3>
 <p>From reminders to smart replies, our AI Assistant will soon be your new best friend. Stay tuned for launch!</p>
 
+    <!-- A-Ads Banner Ad (728x90) -->
+    <div style="text-align:center; margin: 20px 0;">
+        <iframe data-aa='2394805' 
+                src='//ad.a-ads.com/2394805?size=728x90' 
+                style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'>
+        </iframe>
+    </div>
+
   </section>  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>  <script>
     const scene = new THREE.Scene();
     const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
