--- a/index.html
+++ b/index.html
@@ -250,10 +250,13 @@
 
     <!-- A-Ads Banner Ad (728x90) -->
     <div style="text-align:center; margin: 20px 0;">
+        <!-- A-Ads Banner Ad (728x90) -->
+    <div style="text-align:center; margin: 20px 0;">
         <iframe data-aa='2394805' 
                 src='//ad.a-ads.com/2394805?size=728x90' 
                 style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'>
         </iframe>
+    </div>
     </div>
 
   </section>  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>  <script>
