--- a/index.html
+++ b/index.html
@@ -252,10 +252,7 @@
     <div style="text-align:center; margin: 20px 0;">
         <!-- A-Ads Banner Ad (728x90) -->
     <div style="text-align:center; margin: 20px 0;">
-        <iframe data-aa='2394805' 
-                src='//ad.a-ads.com/2394805?size=728x90' 
-                style='width:728px; height:90px; border:0px; padding:0; overflow:hidden; background-color: transparent;'>
-        </iframe>
+        <iframe data-aa='2394809' src='//ad.a-ads.com/2394809?size=300x250' style='width:300px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
     </div>
     </div>
 
