--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
         <!-- A-Ads Banner Ad (728x90) -->
     <div style="text-align:center; margin: 20px 0;">
         <iframe data-aa='2394811' src='//ad.a-ads.com/2394811?size=336x280' style='width:336px; height:280px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+      <iframe data-aa='2394816' src='//ad.a-ads.com/2394816?size=320x50' style='width:320px; height:50px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
     </div>
     </div>
 
