--- a/testing.html
+++ b/testing.html
@@ -23,7 +23,7 @@
   </style>
 </head>
 <body>
-  <iframe src="https://drive.google.com/file/d/1eTTlvl0MpQuZMojf1-05VublZUh8RlMT/preview?autoplay=1"
+  <iframe src="https://drive.google.com/file/d/1eTqKFBVPryMRaRlxFoffn6Xf1lySez6g/view?usp=drivesdk"
     allow="autoplay" allowfullscreen></iframe>
 </body>
 </html>
