--- a/testing.html
+++ b/testing.html
@@ -2,28 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Fullscreen Drive Video</title>
+  <title>Video Player</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
-      overflow: hidden;
-      background-color: black;
+      background-color: #000;
+    }
+    .video-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
     iframe {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
+      width: 90vw;
+      height: 50vh;
       border: none;
-      z-index: -1;
     }
   </style>
 </head>
 <body>
-  <iframe src="https://drive.google.com/file/d/1eTqKFBVPryMRaRlxFoffn6Xf1lySez6g/view?usp=drivesdk"
-    allow="autoplay" allowfullscreen></iframe>
+  <div class="video-container">
+    <iframe src="https://drive.google.com/file/d/1eTTlvl0MpQuZMojf1-05VublZUh8RlMT/preview"
+      allow="autoplay; fullscreen" allowfullscreen></iframe>
+  </div>
 </body>
 </html>
