--- a/testing.html
+++ b/testing.html
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Archive.org Video</title>
-    <style>
-      body {
-        margin: 0;
-        background-color: #000;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-      }
-      video {
-        width: 100%;
-        max-width: 900px;
-        border: none;
-        outline: none;
-      }
-    </style>
-  </head>
-  <body>
-    <video controls autoplay>
-      <source src="https://archive.org/download/1359339943775928319/1359339943775928319.mp4" type="video/mp4" />
-      Your browser does not support the video tag.
-    </video>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Telegram Video Embed - Modverse</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #0f0f0f;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+    .video-container {
+      width: 90%;
+      max-width: 720px;
+      box-shadow: 0 0 25px rgba(0, 255, 255, 0.3);
+      border-radius: 16px;
+      overflow: hidden;
+    }
+    iframe {
+      width: 100%;
+      height: 420px;
+      border: none;
+    }
+  </style>
+</head>
+<body>
+  <div class="video-container">
+    <iframe 
+      src="https://t.me/modverse_online/1054?embed=1" 
+      allowfullscreen>
+    </iframe>
+  </div>
+</body>
 </html>
