--- a/testing.html
+++ b/testing.html
@@ -3,37 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Telegram Video Embed - Modverse</title>
+  <title>Modverse Video</title>
   <style>
     body {
       margin: 0;
-      background-color: #0f0f0f;
-      font-family: Arial, sans-serif;
+      background: #000;
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;
+      height: 100vh;
     }
-    .video-container {
+    video {
       width: 90%;
       max-width: 720px;
-      box-shadow: 0 0 25px rgba(0, 255, 255, 0.3);
       border-radius: 16px;
-      overflow: hidden;
-    }
-    iframe {
-      width: 100%;
-      height: 420px;
-      border: none;
+      box-shadow: 0 0 25px rgba(0, 255, 255, 0.3);
     }
   </style>
 </head>
 <body>
-  <div class="video-container">
-    <iframe 
-      src="https://t.me/modverse_online/1054?embed=1" 
-      allowfullscreen>
-    </iframe>
-  </div>
+  <video controls autoplay muted playsinline>
+    <source src="YOUR_DIRECT_MP4_LINK_HERE" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
 </body>
 </html>
