--- a/testing.html
+++ b/testing.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Modverse Video</title>
+  <title>Video Embed</title>
   <style>
     body {
-      margin: 0;
-      background: #000;
+      background-color: #000;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
     }
     video {
-      width: 90%;
-      max-width: 720px;
-      border-radius: 16px;
-      box-shadow: 0 0 25px rgba(0, 255, 255, 0.3);
+      width: 80%;
+      max-width: 800px;
+      border-radius: 12px;
+      box-shadow: 0 0 30px #00f4ff33;
     }
   </style>
 </head>
 <body>
-  <video controls autoplay muted playsinline>
-    <source src="YOUR_DIRECT_MP4_LINK_HERE" type="video/mp4" />
+  <video controls autoplay muted>
+    <source src="https://file-to-9bot-e7ca0fa0fd5a.herokuapp.com/stream/687f6212eed4f867e91673ba" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </body>
